--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,6 @@ android {
         sourceCompatibility = 1.8
         targetCompatibility = 1.8
     }
-    dataBinding.enabled true
 }
 
 dependencies {
@@ -34,7 +33,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     //jsoup for parsing
-    implementation 'org.jsoup:jsoup:1.11.3'
+    implementation 'org.jsoup:jsoup:1.12.1'
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     //recyclerview
@@ -42,7 +41,7 @@ dependencies {
     //RxJava
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.15'
-    //Lifecycle
+    //Lifecycle for mvvm
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 }
 repositories {
